# gemini-blender-mcp

./: README.md  pyproject.toml
blender_addon/: gemini_mcp_addon.py
examples/: camera_setup.py  lighting_setup.py  rename_objects.py
server/: clipboard_listener.py  gemini_mcp_server.py  protocol.py
